--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-  p i p = = 2 5 . 2   p s y c o p g 2 - b i n a r y = = 2 . 9 . 1 1  aiogramSQLAlchemypython-dotenv
+# Основные компоненты бота и фреймворкиaiogramSQLAlchemypython-dotenvapscheduler# Компоненты для работы с Kwork и интернетом (если используются)requests beautifulsoup4 # Компоненты для работы с БД PostgreSQLpsycopg2-binary==2.9.11# Системныеpip==25.2
